--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="html5.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="html5.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
     <title>Faqe</title>
   </head>
   <body>
     <h1>Welcome</h1>
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      &nbsp; Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the
       1500s, when an unknown printer took a galley of type and scrambled it to
       make a type specimen book. It has survived not only five centuries, but
@@ -19,10 +19,10 @@
       unchanged. It was popularised in the 1960s with the release of Letraset
       sheets containing Lorem Ipsum passages, and more recently with desktop
       publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
+      Ipsum. &lt; &copy;Devi &gt;
     </p>
     <button>Sumbit</button>
-    <hr>
+    <hr />
     <footer>Goodbye</footer>
   </body>
 </html>
