--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
       unchanged. It was popularised in the 1960s with the release of Letraset
       sheets containing Lorem Ipsum passages, and more recently with desktop
       publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum. &lt; &copy;Devi &gt;
+      Ipsum. 
+      <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN</a>
+      <ul>
+        <li>Ide</li>
+        <li>Puna</li>
+        <li>Restorant</li>
+      </ul>
     </p>
     <button>Sumbit</button>
     <hr />
-    <footer>Goodbye</footer>
+    <footer>Goodbye
+        &lt; &copy;Devi &gt;
+    </footer>
   </body>
 </html>
