--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <button>Sumbit</button>
     <hr />
     <footer>Goodbye
-        &lt; &copy;Devi &gt;
+        &lt; &copy;<a href="about.html" target="_blank">Devi</a>  &gt;
     </footer>
   </body>
 </html>
