--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <title>Faqe</title>
   </head>
   <body>
+    <nav>     
+        <ul>
+            <li><a href="#html">Home</a></li>
+            <li><a href="#.">Lorem</a></li>
+        </ul>
     <h1>Welcome</h1>
     <p>
+        <section id="html">
       &nbsp; Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       Lorem Ipsum has been the industry's standard dummy text ever since the
       1500s, when an unknown printer took a galley of type and scrambled it to
@@ -19,8 +25,14 @@
       unchanged. It was popularised in the 1960s with the release of Letraset
       sheets containing Lorem Ipsum passages, and more recently with desktop
       publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum. 
+      Ipsum. </section>
+      <hr>
       <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN</a>
+      <section id=".">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam consequuntur nihil quisquam amet nemo culpa eligendi reiciendis minima quibusdam accusamus, optio, non recusandae rerum itaque. Veniam quas nobis consequuntur eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nobis cum earum consectetur at doloremque molestias consequuntur aperiam reiciendis aliquam omnis tempore nostrum error, iure beatae voluptas eligendi? Dolorum, maiores.
+      
+    </section>
+    <hr>
       <ul>
         <li>Ide</li>
         <li>Puna</li>
