--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>About me</title>
   </head>
   <body>
-    <p>
+    <p> <!--Shenja komenteve.-->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci
         asperiores numquam similique sint unde nostrum consequatur rem impedit,
         quaerat molestias modi totam officia at, incidunt ipsum nemo inventore
@@ -21,6 +21,7 @@
     <ul>
       <li>19 vjec</li>
       <li>Student</li>
+      <li><a href="html5.png" download="">Shkarko foton.</a></li>
     </ul>
     <footer>&lt;&copy;Devi &gt;</footer>
   </body>
