--- a/about.html
+++ b/about.html
@@ -23,6 +23,9 @@
       <li>Student</li>
       <li><a href="html5.png" download="">Shkarko foton.</a></li>
     </ul>
+    <p>
+      <a href="/">Home</a>
+    </p>
     <footer>&lt;&copy;Devi &gt;</footer>
   </body>
 </html>
