--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav>     
         <ul>
-            <li><a href="#html">Home</a></li>
+            <li><a href="#html">1st</a></li>
             <li><a href="#.">Lorem</a></li>
         </ul>
     <h1>Welcome</h1>
@@ -25,7 +25,9 @@
       unchanged. It was popularised in the 1960s with the release of Letraset
       sheets containing Lorem Ipsum passages, and more recently with desktop
       publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum. </section>
+      Ipsum. 
+    </section>
+    <img src="html5.png" alt="Html logo" title="Html" width="100" height="100" >
       <hr>
       <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN</a>
       <section id=".">
