--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <title>Faqe</title>
   </head>
   <body>
-    <nav>     
+  <header>
+    <nav>   
         <ul>
             <li><a href="#html">1st</a></li>
             <li><a href="#.">Lorem</a></li>
         </ul>
+    </nav>
+  </header>
     <h1>Welcome</h1>
+    <main>
     <p>
         <section id="html">
       &nbsp; Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -34,6 +38,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam consequuntur nihil quisquam amet nemo culpa eligendi reiciendis minima quibusdam accusamus, optio, non recusandae rerum itaque. Veniam quas nobis consequuntur eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus nobis cum earum consectetur at doloremque molestias consequuntur aperiam reiciendis aliquam omnis tempore nostrum error, iure beatae voluptas eligendi? Dolorum, maiores.
       
     </section>
+  </main>
     <hr>
       <ul>
         <li>Ide</li>
