--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav aria-label="primary nav">
       <ul>
         <li><a href="#html">1st</a></li>
         <li><a href="#.">Lorem</a></li>
@@ -32,6 +32,12 @@
       sheets containing Lorem Ipsum passages, and more recently with desktop
       publishing software like Aldus PageMaker including versions of Lorem
       Ipsum.
+      <aside>
+        <details>
+          <summary>Gjej sa vjec jam un.</summary>
+          <p>Un jam 19 vjec.</p>
+        </details>
+      </aside>
     </section>
     <img src="html5.png" alt="Html logo" title="Html" width="100" height="100">
     <hr>
