--- a/about.html
+++ b/about.html
@@ -9,14 +9,15 @@
     <title>About me</title>
   </head>
   <body>
-    <p> <!--Shenja komenteve.-->
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci
-        asperiores numquam similique sint unde nostrum consequatur rem impedit,
-        quaerat molestias modi totam officia at, incidunt ipsum nemo inventore
-        debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-        repellat asperiores, quas, nam natus nemo eos cum repellendus sint autem
-        maiores earum itaque, fugiat dolorem? Quibusdam dolor quidem eligendi
-        esse!
+    <p>
+      <!--Shenja komenteve.-->
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci
+      asperiores numquam similique sint unde nostrum consequatur rem impedit,
+      quaerat molestias modi totam officia at, incidunt ipsum nemo inventore
+      debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+      repellat asperiores, quas, nam natus nemo eos cum repellendus sint autem
+      maiores earum itaque, fugiat dolorem? Quibusdam dolor quidem eligendi
+      esse!
     </p>
     <ul>
       <li>19 vjec</li>
