--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
   <link rel="icon" href="html5.png" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
   <title>Faqe</title>
+  
 </head>
 
 <body>
+  <h1>
+    Nedi
+  </h1>
   <header>
     <nav aria-label="primary nav">
       <ul>
