--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     Nedi
   </h1>
   <header>
+    <div>
     <nav aria-label="primary nav">
       <ul>
         <li><a href="#html">1st</a></li>
         <li><a href="#.">Lorem</a></li>
       </ul>
     </nav>
+  </div>
   </header>
   <h1>Welcome</h1>
   <main>
